--- a/Application/Home/View/Index/signin.html
+++ b/Application/Home/View/Index/signin.html
@@ -66,7 +66,7 @@
                     </form>
                 </li>
                 <li><a href="#">设置</a></li>
-                <li><a href="#">登陆</a></li>
+                <li><a href='#'>登陆</a></li>
                 <li><a href="#">注册</a></li>
                 <li><img class="small" src="__PUBLIC__/img/icon.png" style="width:40px;height:40px"></li>
 
@@ -78,8 +78,8 @@
 
 <div class="container">
 
-    <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
+    <form class="form-signin" action="login.php"  method="post" >
+        <h2 class="form-signin-heading ">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
